# olminer

./: BuildInfo.h.in  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cd.yml  ci.yml
cmake/: flatten.cmake
cmake/Hunter/: config.cmake
docker.cpuminer/: Dockerfile  README.md
docker.olminer/: Dockerfile  README.md
docker.olminer/linux/: Dockerfile  Dockerfile.hiveos
docker.olminer/windows/: Dockerfile
docs/: POOL_EXAMPLES_OL.md
hive/: CMakeLists.txt  control  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  olminer.sh
libapicore/: ApiServer.cpp  CMakeLists.txt
libethash-cpu/: CPUMiner.cpp
libethcore/: CMakeLists.txt  EthashAux.h  Farm.cpp  Farm.h
libhwmon/: CMakeLists.txt
libolhash/: CMakeLists.txt  olhash.cpp  olhash.h
libolhash-cpu/: CMakeLists.txt  CPUMiner.cpp
libolhash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  blake2b.cu  blake2cu.h  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h  olhash.cuh  olhash_cuda_miner_kernel.cu  olhash_cuda_miner_kernel.h  olhash_cuda_miner_kernel_globals.h
libolhash/ref/: blake2b-ref.c
libolhash/sse/: blake2-config.h  blake2b.c
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp
libpoolprotocols/getwork/: EthGetworkClient.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp
olminer/: CMakeLists.txt  main.cpp  olminer.rc
scripts/actions/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
